# mkview

./: .gitignore  .pylintrc  README.md  lint.sh  pyproject.toml  test_settings.py  test_urls.py
.github/workflows/: ci.yml  release.yml
mkview/: apps.py  tests.py  urls.py  views.py
